[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emodpy"
version = "2.1.12"
description = "Core tools for modeling using EMOD"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sharon Chen", email = "sharon.chen@gatesfoundation.org"},
    {name = "Zhaowei Du", email = "zhaowei.du@gatesfoundation.org"},
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"},
    {name = "Daniel Bridenbecker", email = "daniel.bridenbecker@gatesfoundation.org"},
    {name = "Svetlana Titova", email = "svetlana.titova@gatesfoundation.org"},
    {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"}]
keywords = ['modeling', 'IDM']
dependencies = [
    "click~=7.1",
    "idmtools~=2.0",
    "idmtools-platform-comps~=2.0",
    "idmtools-platform-slurm~=2.0",
    "idmtools-platform-container~=2.0",
    "idmtools-models~=2.0",
    "emod-api~=2.0",
    "matplotlib",
    "astor",
    "astunparse",
    "bs4",
    "keyring",
    "requests~=2.29"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Framework:: IDM-Tools :: models",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
    
[project.urls]
Repository="https://github.com/EMOD-Hub/emodpy"
Issues="https://github.com/EMOD-Hub/emodpy/issues"

[project.optional-dependencies]
test = [
    "emod-hiv",
    "emod-malaria",
    "emod-common",
    "emod-generic",
    "idmtools-test",
    "pytest~=8.1",
    "unittest-xml-reporting~=3.2",
    "pytest-xdist",
    "pytest-runner",
    "pytest-timeout",
    "pytest-cache",
    "flake8",
    "coverage",
    "py-make"]
packaging = [
    "build",
    "flake8",
    "coverage",
    "py-make",
    "bump2version",
    "twine"]

[project.entry-points.idmtools_task]
idmtools_task_emod = "emodpy.emod_task:EMODTaskSpecification"

[project.entry-points."idmtools_cli.cli_plugins"]
emodpy = "emodpy_cli.cli.schema:emodpy"

[tool.setuptools.packages]
find = {include = ["emodpy*"]}

[tool.pip]
extra-index-url = "https://packages.idmod.org/api/pypi/pypi-production/simple"

